overflow is fixed in all pages except contact.blade.php and applicationForm.blade.php

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -114,6 +114,9 @@
     #back-archive{
         left: 1px;
     }
+    #sub-authors-move-return{
+        left: 1px;
+    }
 }
 @media only screen and (max-width: 375px){
     #homepageOchakvaite-change{
@@ -169,6 +172,9 @@
         left: 1px;
     }
     #back-archive{
+        left: 1px;
+    }
+    #sub-authors-move-return{
         left: 1px;
     }
 }
@@ -228,6 +234,9 @@
     #back-archive{
         left: 1px;
     }
+    #sub-authors-move-return{
+        left: 1px;
+    }
 }
 @media only screen and  (max-width: 360px){
     #homepageOchakvaite-change{
@@ -283,6 +292,9 @@
         left: 1px;
     }
     #back-archive{
+        left: 1px;
+    }
+    #sub-authors-move-return{
         left: 1px;
     }
 }
@@ -342,6 +354,9 @@
     #back-archive{
         left: 1px;
     }
+    #sub-authors-move-return{
+        left: 1px;
+    }
 }
 /* Small Devices, Tablets */
 /*@media only screen and (min-width : 768px) {
@@ -394,6 +409,9 @@
         left: 1px;
     }
     #back-archive{
+        left: 1px;
+    }
+    #sub-authors-move-return{
         left: 1px;
     }
 }*/
@@ -607,7 +625,7 @@ body{
 }
 
 .homepageOchakvaite {
-    font-size: 65px;
+    font-size: 60px;
     font-family: "DecimaMonoX";
     color: rgb(121, 77, 159);
     font-weight: bold;
@@ -615,9 +633,13 @@ body{
     text-decoration: none;
     text-align: center;
 }
+.move-ochakvaite{
+    left: 500px;
+}
 /*Contact Forms Css*/
 .contact{
-    left: 200px;
+    left: 170px;
+    height: 250px;
 }
 .contactButon{
     font-size: 10px;
@@ -748,6 +770,7 @@ body{
     width:50%;
     position: relative;
  }
+
 .contactrightspan{
    text-align: right;
  }
@@ -784,7 +807,7 @@ body{
     text-transform: uppercase;
 }
 .aboutleft{
-    left:200px;
+    left: 165px;
 }
 
 .picAbout img{
@@ -877,7 +900,9 @@ body{
     text-transform: uppercase;
 }
 /*Event Css*/
-
+.move-left-events{
+    left: 150px;
+}
 .months li{
     font-size: 14px;
     font-family: "359Sans";
@@ -926,9 +951,12 @@ body{
     position: relative;
 }
 .event-left{
-    left: 200px;
+    left: 150px;
 }
 /*Program Css*/
+.programa{
+    left: 150px;
+}
 .programa img {
     display: block;
     max-width: 100%;
@@ -936,6 +964,7 @@ body{
     position: relative;
 
 }
+
 .programa span{
     background-color: rgb(195, 227, 227);
     /*background-color: #2ab27b;*/
@@ -1009,7 +1038,7 @@ body{
 }
 
 .textunderimg p{
-    width: 340px;
+
 }
 .programadetails img{
     max-width: 100%;
@@ -1034,7 +1063,6 @@ body{
     font-size: 30px;
     font-family: "359Sans";
     color: rgb(109, 110, 113);
-
 }
 .back-to-top{
     font-size: 20px;
@@ -1053,7 +1081,9 @@ body{
     padding-top: 12px;
     padding-bottom: 12px;
 }
-
+.programadetails{
+    left: 150px;
+}
 .ptagleftdetails {
     width: 50%;
     position: relative;
@@ -1212,7 +1242,7 @@ body{
 
 /*Application Form CSS*/
 .application-form-part-one{
-    left: 200px;
+    left: 165px;
 }
 .title-reglament{
     font-size: 33px;
@@ -1490,6 +1520,9 @@ input[type="checkbox"]{
     background-color: lightgray;
 }
 .authors-move{
+    left: 165px;
+}
+.sub-authors-move{
     left: 200px;
 }
 #move-down{
